finished forloops + if conditions

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,19 +7,13 @@
         <title>Document</title>
     </head>
     <body>
+        {% if 6*6 == 36 %}
 
-        {% if 19 == test.age %}
-        <h1>{{ test.name }}</h1>
+        <h1>{{name}}</h1>
+
         {% endif %}
 
-        {% for post in posts%}
-        <h2>{{post.title}}</h2>
-        {% endfor %}
-
-
     </body>
-
-
 </html>
 
 
