--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-    </head>
-    <body>
-        {% if 6*6 == 36 %}
+{% extends 'base.html' %}
 
-        <h1>{{name}}</h1>
+{% block title %}{{ name }}{% endblock %}
 
-        {% endif %}
-
-    </body>
-</html>
+{% block content %}
 
 
+{% if test.name == "Bob" %}
+<h1>{{ test.name }}</h1>
+{% elif test.name == "Charles"%}
+<h1> {{ test.name }} </h1>
+{% else %}
+<h2>{{ test.age }}</h2>
+{% endif %}
+
+
+<div class="posts">
+    {% for post in posts %}
+        <div class="post">
+            <h1>{{post.title}}</h1>
+            <p>{{post.body}}</p>
+        </div>
+    {% endfor %}
+</div>
+
+{% if name == "James" %}
+
+<h2>{{ name }}</h2>
+
+{% else %}
+
+<h2> </h2>
+    
+{% endif %}
+    
+{% block ending %} {{ name }}{{ age }} {% endblock %}
+
+
+{% endblock %}
