--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,11 @@
         <title>Document</title>
     </head>
     <body>
-        {% if 6*6 == 3 %}
+        {% if name != "James" %}
 
         <h1>{{test.name}}</h1>
 
-        {% elif 5*5 == 2%}
+        {% elif 5*5 == 26%}
 
         <h1>{{test.age}}</h1>
 
