modified else logic

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,11 @@
         <title>Document</title>
     </head>
     <body>
-        {% if name != "James" %}
+        {% if name == "Bob" %}
 
         <h1>{{test.name}}</h1>
 
-        {% elif 5*5 == 26%}
+        {% elif 5*5 == 35%}
 
         <h1>{{test.age}}</h1>
 
