--- a/templates/index.html
+++ b/templates/index.html
@@ -1,32 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-    </head>
-    <body>
-        {% if name == "Bob" %}
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    {% if name == "James" %}
+    <h1>My name is {{ test.name }}. I am a great guy.</h1>
+    {% elif name == "Bob" %}   
+    <h1>My name is {{ test.name }}. I am a great guy.</h1>
+    {% else %}
+    <h1>My name is Arnold. I am a great guy.</h1>
+    {% endif %}
 
-        <h1>{{test.name}}</h1>
-
-        {% elif 5*5 == 35%}
-
-        <h1>{{test.age}}</h1>
-
-        {% else %}
-
-        <h1>{{test.surname}}</h1>
-
-        {% endif %}
-
-        {% for post in posts%}
-        <h2>{{post.title}}</h2>
-        <p>{{post.body}}</p>
-        {% endfor %}
-
-    </body>
+    {% endfor %} 
+    {% for post in posts%}
+    <h2>Damn son ! {{ post.title }}! Damn son!</h2>
+    <p>{{ post.body }}</p>
+    {% endfor %}
+</body>
 </html>
-
 
