--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,25 @@
-<h1>{{ name }}</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    {% if name == "James" %}
+    <h1>My name is {{ test.name }}. I am a great guy.</h1>
+    {% elif name == "Bob" %}   
+    <h1>My name is {{ test.name }}. I am a great guy.</h1>
+    {% else %}
+    <h1>My name is Arnold. I am a great guy.</h1>
+    {% endif %}
+
+    {% endfor %} 
+    {% for post in posts%}
+    <h2>Damn son ! {{ post.title }}! Damn son!</h2>
+    <p>{{ post.body }}</p>
+    {% endfor %}
+</body>
+</html>
+
